## Process this file with automake to produce Makefile.in
## Created by Anjuta

## The main script
bin_SCRIPTS = python_brickjump.py \
	settings.py

## Directory where .class files will be installed
python_brickjumpdir = $(pythondir)/python_brickjump

python_brickjump_PYTHON = \
	python_brickjump.py \
	brick.py \
	game_functions.py \
	runningman.py \
	trash.py
